Revert "Fix code sample overflow-x on smaller devices"
This reverts commit 21286657e236e907dbb99c5563a47997d8376e3d.

--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -44,7 +44,6 @@
 
 .measure {
   max-width: var(--text-measure);
-  overflow-x: hidden;
 }
 
 /* u: Color */
